# fangeleg

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
crates/fangeleg-cli/: Cargo.toml
crates/fangeleg-cli/src/: main.rs
crates/fangeleg-core/: Cargo.toml
crates/fangeleg-core/src/: competent_agent.rs  lib.rs  naive_agent.rs  simulation.rs
crates/fangeleg-wasm/: Cargo.toml
crates/fangeleg-wasm/src/: js_agent.rs  lib.rs  wasm.rs
src/: js_agent.rs  lib.rs  main.rs  naive_agent.rs  simulation.rs  wasm.rs
web/: index.html
