[package]
name = "fangeleg"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.10.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "=0.2.108"
getrandom = { version = "0.4.2", features = ["wasm_js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Element",
]
